data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1984.wast
;; 5. **Test Description**: Execute a sequence where a function is imported, called, and conditionally returns using `br_if`. Test whether stack adjustments are properly managed before and after the call.    - **Constraint Checked**: Handling of operand stack when functions conditionally transfer control back to the caller across module boundaries.    - **Relation to Control Flow**: Ensures proper management of operand stack amid conditional returns and inter-module transitions.

(assert_invalid
  (module
    (import "env" "external_func" (func $external_func (param i32) (result i32)))
    (func (block (br_if 0 (call $external_func (i32.const 1)) (i32.const 0))))
  )
  "type mismatch"
)